--- a/src/main/resources/templates/animalView.html
+++ b/src/main/resources/templates/animalView.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Animal</title>
 </head>
 <body>
 <p th:text="${catFact.getText()}" />
