--- a/src/main/resources/templates/weatherView.html
+++ b/src/main/resources/templates/weatherView.html
@@ -5,9 +5,13 @@
     <title>Weather</title>
 </head>
 <body>
-<p>Weather forecast for city: <span th:text="${weather.getName()}"> </p>
-<p th:text="${weather.getWeather().get(0).getDescription()}" />
-<p th:text="${weather.getWeather().get(0).getMain()}" />
-<img th:src="${weather.getWeather().get(0).getSrc()}" />
+<h3><a href="https://openweathermap.org/api">OpenWeatherMap</a></h3>
+<p>Weather forecast for city: <span th:text="${weather.getName()}"/> <br>
+    <span th:text="${weather.getWeather().get(0).getDescription()}"/><br>
+    <!--<p th:text="${weather.getWeather().get(0).getMain()}" />-->
+    <img th:src="${weather.getWeather().get(0).getSrc()}"><br>
+    Temp: <span th:text="${weather.getMain().getTemp()}"/> &deg;C<br>
+    Pressure: <span th:text="${weather.getMain().getPressure()}"/> hPa<br>
+    Humidity: <span th:text="${weather.getMain().getHumidity()}"/> %<br>
 </body>
 </html>
