adding currency game

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,6 +5,11 @@
     <title>Main</title>
 </head>
 <body>
+<form th:action="@{/currency}" method="get">
+    <p>Guess PLN rate of USD: <input type="text" name="plnRate">
+        <input type="submit" value="Check"></p>
+</form>
+
 <form th:action="@{/weather}" method="get">
     <p>Weather forecast for city: <input type="text" name="city">
         <input type="submit" value="Show weather"></p>
