adding hereoku support jre11

--- a/src/main/resources/templates/currencyView.html
+++ b/src/main/resources/templates/currencyView.html
@@ -8,9 +8,8 @@
 
 <p th:if="${plnRate==0}"> Correct!</p>
 <p th:if="${plnRate==1}"> No:( Try lower value! </p>
-<p th:if="${plnRate==-1}"> No:( Try higer value! </p>
+<p th:if="${plnRate==-1}"> No:( Try higher value! </p>
 <p th:if="${plnRate==-2}"> Wrong value! Type 3.78 for example </p>
-
 
 </body>
 </html>
