--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,31 +2,53 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>Main</title>
 </head>
 <body>
-<form th:action="@{/currency}" method="get">
-    <p>Guess PLN rate of USD: <input type="text" name="plnRate">
-        <input type="submit" value="Check"></p>
-</form>
 
-<form th:action="@{/weather}" method="get">
-    <p>Weather forecast for city: <input type="text" name="city">
-        <input type="submit" value="Show weather"></p>
-</form>
 
-<form th:action="@{/chuck-joke}" method="get">
-    <p>No of jokes: <input type="text" name="cnt">
-        <input type="submit" value="Show jokes"></p>
-</form>
+<div class="container">
+    <div class="form-row">
+        <div class="col-md-12">
+            <form th:action="@{/currency}" method="get">
+                Guess PLN rate of USD:
+                <input type="text" class="form-control" name="plnRate" placeholder="PLN rate">
+                <input class="btn btn-primary" type="submit" value="Check">
+            </form>
+        </div>
+    </div>
+    <form th:action="@{/weather}" method="get">
+        <p>Weather forecast for city: <input type="text" name="city">
+            <input class="btn btn-outline-secondary" type="submit" value="Show weather"></p>
+    </form>
 
-<form th:action="@{/ip-details}" method="get">
-    <p><input type="submit" value="IP details"></p>
-</form>
+    <form th:action="@{/chuck-joke}" method="get">
+        <p>No of jokes: <input type="text" name="cnt">
+            <input class="btn btn-outline-secondary" type="submit" value="Show jokes"></p>
+    </form>
 
-<form th:action="@{/animal-fact}" method="get">
-    <p><input type="submit" value="Cat fact"></p>
-</form>
+    <form th:action="@{/ip-details}" method="get">
+        <p><input class="btn btn-outline-secondary" type="submit" value="IP details"></p>
+    </form>
+
+    <form th:action="@{/animal-fact}" method="get">
+        <p><input class="btn btn-outline-secondary" type="submit" value="Cat fact"></p>
+    </form>
+
+</div>
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 
 </body>
 </html>
