--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,7 +12,7 @@
 
 <div class="container">
     <div class="form-row">
-        <div class="col-md-12">
+        <div class="col-sm-12">
             <form th:action="@{/currency}" method="get">
                 Guess PLN rate of USD:
                 <input type="text" class="form-control" name="plnRate" placeholder="PLN rate">
